--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ addons:
   chrome: stable
 before_install:
   - bin/chromedriver-install
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+script: bin/rspec
