--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,7 @@ language: ruby
 cache: bundler
 dist: trusty
 addons:
-  chrome: stable
+  chrome: beta
 before_install:
   - bin/chromedriver-install
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3
 script: bin/rspec
