--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: ruby
 cache: bundler
+sudo: required
 dist: trusty
 addons:
   chrome: stable
 before_install:
   - bin/chromedriver-install
-script: bin/rspec
+script: bin/rspec --fail-fast
